Fix for null in metadata tags